<resources>
    <string name="app_name">Estafeta</string>
    <string name="search_hint">Search...</string>
    <string name="detail_title_number">Number</string>
    <string name="detail_title_plan_date_start">Planned date start</string>
    <string name="detail_title_plan_date_end">Planned date end</string>
    <string name="detail_title_vin">VIN</string>
    <string name="detail_title_model">Model</string>
    <string name="detail_title_brand">Brand</string>
    <string name="detail_title_model_code">Model code</string>
    <string name="detail_title_survey_point">Survey point</string>
    <string name="error_message">An error occured.\nCheck username or password.\nOr check internet connection.</string>
</resources>
