<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.green.estafeta.ActivityDetails">

    <android.support.v7.widget.Toolbar
        android:id="@+id/details_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_below="@id/details_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/details_title_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textSize="16sp"
                android:text="@string/detail_title_number"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/details_value_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:layout_marginBottom="12dp"
                android:visibility="gone"
                />

            <TextView
                android:id="@+id/details_title_plan_date_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textSize="16sp"
                android:text="@string/detail_title_plan_date_start"
                android:visibility="gone"
                />
            <TextView
                android:id="@+id/details_value_plan_date_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:layout_marginBottom="12dp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/details_title_plan_date_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textSize="16sp"
                android:text="@string/detail_title_plan_date_end"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/details_value_plan_date_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:layout_marginBottom="12dp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/details_title_vin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textSize="16sp"
                android:text="@string/detail_title_vin"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/details_value_vin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:layout_marginBottom="12dp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/details_title_brand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textSize="16sp"
                android:text="@string/detail_title_brand"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/details_value_brand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:layout_marginBottom="12dp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/details_title_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textSize="16sp"
                android:text="@string/detail_title_model"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/details_value_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:layout_marginBottom="12dp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/details_title_model_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textSize="16sp"
                android:text="@string/detail_title_model_code"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/details_value_model_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:layout_marginBottom="12dp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/details_title_survey_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textSize="16sp"
                android:text="@string/detail_title_survey_point"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/details_value_survey_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:layout_marginBottom="12dp"
                android:visibility="gone"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
